--- a/Bibliotekarz/Bibliotekarz/Bibliotekarz.Client/Routes.razor
+++ b/Bibliotekarz/Bibliotekarz/Bibliotekarz.Client/Routes.razor
@@ -1,6 +1,16 @@
-﻿<Router AppAssembly="typeof(Program).Assembly">
+﻿@using Bibliotekarz.Client.Layout
+@using Microsoft.AspNetCore.Components.Authorization
+
+<Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
+        <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+            <NotAuthorized>
+                <Login />
+            </NotAuthorized>
+        </AuthorizeRouteView>
         <FocusOnNavigate RouteData="routeData" Selector="h1" />
     </Found>
+    <NotFound>
+        <p>Pod tym adresem nic nie istnieje</p>
+    </NotFound>
 </Router>
