--- a/Bibliotekarz/Bibliotekarz/Bibliotekarz.Client/Layout/MainLayout.razor
+++ b/Bibliotekarz/Bibliotekarz/Bibliotekarz.Client/Layout/MainLayout.razor
@@ -1,5 +1,10 @@
-﻿@using Microsoft.AspNetCore.Components.Authorization
+﻿@using Bibliotekarz.Client.ClientServices
+@using Microsoft.AspNetCore.Components.Authorization
 @inherits LayoutComponentBase
+
+@inject IAuthClient AuthClient
+@inject NavigationManager Navigation
+
 
 <MudThemeProvider Theme="@_theme" IsDarkMode="_isDarkMode" />
 <MudPopoverProvider />
@@ -12,7 +17,32 @@
             <MudText Typo="Typo.h5" Class="ml-3">Application</MudText>
             <MudSpacer />
             <MudIconButton Icon="@(DarkLightModeButtonIcon)" Color="Color.Inherit" OnClick="@DarkModeToggle" />
-            <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
+            
+            <MudMenu AnchorOrigin="Origin.BottomRight" Dense="true" Class="mt-1 ml-4">
+                <ActivatorContent>
+                    <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
+                </ActivatorContent>
+                
+                <ChildContent>
+                    <AuthorizeView>
+                        <Authorized>
+                            <MudText Typo="Typo.h4">Jesteś zalogowany</MudText>
+                            <MudDivider Class="mb-2" />
+                            <MudListItem T="string" Text="Logout" 
+                                         OnClick="OnLogoutClicked"
+                                         Icon="@Icons.Material.Filled.Logout"/>
+                        </Authorized>
+                        <NotAuthorized>
+                            <MudText Typo="Typo.h4">NIE jesteś zalogowany</MudText>
+                            <MudDivider Class="mb-2" />
+                            <MudListItem T="string" Text="Login"
+                                         OnClick="OnLoginClicked"
+                                         Icon="@Icons.Material.Filled.Login" />
+                        </NotAuthorized>
+                    </AuthorizeView>
+                </ChildContent>
+            </MudMenu>
+
         </MudAppBar>
         <MudDrawer id="nav-drawer" @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
             <NavMenu />
@@ -101,6 +131,18 @@
         true => Icons.Material.Rounded.AutoMode,
         false => Icons.Material.Outlined.DarkMode,
     };
+
+    private async Task OnLogoutClicked()
+    {
+        await AuthClient.LogoutAsync();
+        Navigation.NavigateTo("/login");
+    }
+
+    private async Task OnLoginClicked()
+    {
+        Navigation.NavigateTo("/login");
+    }
+
 }
 
 
