--- a/Bibliotekarz/Bibliotekarz/Bibliotekarz.Client/Layout/MainLayout.razor
+++ b/Bibliotekarz/Bibliotekarz/Bibliotekarz.Client/Layout/MainLayout.razor
@@ -1,9 +1,11 @@
-﻿@using Bibliotekarz.Client.ClientServices
+﻿@using Bibliotekarz.Client.Authentication
+@using Bibliotekarz.Client.ClientServices
 @using Microsoft.AspNetCore.Components.Authorization
 @inherits LayoutComponentBase
 
-@inject IAuthClient AuthClient
 @inject NavigationManager Navigation
+@inject JwtAuthenticationStateProvider StateProvider
+@inject IDialogService DialogService
 
 
 <MudThemeProvider Theme="@_theme" IsDarkMode="_isDarkMode" />
@@ -26,14 +28,14 @@
                 <ChildContent>
                     <AuthorizeView>
                         <Authorized>
-                            <MudText Typo="Typo.h4">Jesteś zalogowany</MudText>
+                            <MudText Typo="Typo.h6">Jesteś zalogowany</MudText>
                             <MudDivider Class="mb-2" />
                             <MudListItem T="string" Text="Logout" 
                                          OnClick="OnLogoutClicked"
                                          Icon="@Icons.Material.Filled.Logout"/>
                         </Authorized>
                         <NotAuthorized>
-                            <MudText Typo="Typo.h4">NIE jesteś zalogowany</MudText>
+                            <MudText Typo="Typo.h6">NIE jesteś zalogowany</MudText>
                             <MudDivider Class="mb-2" />
                             <MudListItem T="string" Text="Login"
                                          OnClick="OnLoginClicked"
@@ -134,8 +136,20 @@
 
     private async Task OnLogoutClicked()
     {
-        await AuthClient.LogoutAsync();
-        Navigation.NavigateTo("/login");
+        var state = await StateProvider.GetAuthenticationStateAsync();
+        var user = state.User;
+
+        var parameters = new DialogParameters
+        {
+            {nameof(Dialogs.Logout.ContentText), "Czy na pewno chcesz się wylogować?"},
+            {nameof(Dialogs.Logout.ButtonText), "Wylogowanie"},
+            {nameof(Dialogs.Logout.Color), Color.Error},
+            {nameof(Dialogs.Logout.CurrentUserId), user?.Identity?.Name},
+        };
+
+        var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.Small, FullWidth = true };
+
+        await DialogService.ShowAsync<Dialogs.Logout>("Wyloguj", parameters, options);
     }
 
     private async Task OnLoginClicked()
